# funkwhale

./: .gitlab-ci.yml  CHANGELOG  CONTRIBUTING.rst  README.rst  dev.yml
api/: setup.cfg
api/config/: api_urls.py  plugins.py  routing.py  urls.py
api/funkwhale_api/: __init__.py
api/funkwhale_api/plugins/funkwhale_plugin_prometheus/: README.md  entrypoint.py  setup.cfg
api/funkwhale_api/plugins/prometheus_exporter/: entrypoint.py  setup.cfg
api/requirements/: base.txt  local.txt  test.txt
api/tests/: conftest.py  test_import_audio_file.py
changes/: notes.rst  template.rst
changes/changelog.d/: 1011.bugfix  1048.bugfix  1053.feature  1078.bugfix  1082.bugfix  1083.enhancement  1085.enhancement  1086.bugfix  1087.bugfix  1088.enhancement  1089.bugfix  1090.bugfix  1091.bugfix  1092.bugfix  1093.bugfix  1096.bugfix  1099.enhancement  1102.enhancement  1104.bugfix  1105.feature  1107.enhancement  1112.enhancement  1113.enhancement  1116.enhancement  1117.bugfix  1121.bugfix  1121.enhancement  1125.enhancement  1127.enhancement  1128.enhancement  1130.enhancement  1131.enhancement  1134.enhancement  1137.docs  1138.bugfix  1140.bugfix  1144.bugfix  1145.enhancement  1147.bugfix  1151.enhancement  (+56 more)
deploy/: env.prod.sample
docs/: build_swagger.sh  conf.py  swagger.yml
docs/admin/: importing-music.rst  upgrading.rst  url.rst
docs/api/: definitions.yml  parameters.yml  properties.yml
docs/developers/: index.rst  plugins.rst
docs/installation/: docker.rst  index.rst
docs/users/: followchannel.rst
front/: Dockerfile  package.json  vue.config.js
front/locales/: app.pot
front/public/: index.html
front/scripts/: fix-fomantic-css.py  fix-fomantic-css.sh
front/src/: App.vue  (+4 more)
(+391 files in other folders)
