[metadata]
name = funkwhale-prometheus
description = "A prometheus metric exporter for your Funkwhale pod"
version = 0.1.dev0
author = Agate Blue
author_email = me@agate.blue
url = https://dev.funkwhale.audio/funkwhale/funkwhale
long_description = file: README.md
license = AGPL3
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: AGPL
    Natural Language :: English
    Programming Language :: Python :: 3.6

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    django_prometheus

[options.entry_points]
funkwhale-plugin =
	prometheus = prometheus_exporter.main


[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1

[tool:pytest]
testpaths = tests
